# thmnayah

./: PROJECT_PROGRESS_REPORT.md  README.md  تقرير_تقدم_المشروع.md  مشروع_ثمانية_منهجية_التطوير.md
cms/services/cms/: .env.example  .gitignore  Makefile  README.md  api_contracts.md  clean_architecture_summary.md  pyproject.toml  pytest.ini
cms/services/cms/alembic/: alembic.ini  env.py
cms/services/cms/alembic/versions/: 001_create_categories_table.py
cms/services/cms/app/: main.py
cms/services/cms/app/api/: __init__.py  deps.py
cms/services/cms/app/api/v1/: __init__.py
cms/services/cms/app/business/: __init__.py  content_business_service.py  domain_events.py  series_business_service.py
cms/services/cms/app/controllers/: __init__.py  content_controller.py  series_controller.py
cms/services/cms/app/core/: __init__.py  config.py  events.py  security.py
cms/services/cms/app/db/: base.py  init_db.py  session.py
cms/services/cms/app/models/: __init__.py  base.py  category.py  content.py  series.py
cms/services/cms/app/repositories/: base.py  category.py  content.py  interfaces.py  series.py
cms/services/cms/app/services/: category.py  content.py  series.py
cms/services/cms/app/tasks/: models.py
cms/services/cms/docker/: Dockerfile  README.md  docker-compose-dependencies.yml  docker-compose.prod.yml  docker-compose.yml
cms/services/cms/docker/init-scripts/: 01-create-extensions.sql
cms/services/cms/docker/nginx/: nginx.conf
cms/services/cms/docs/: cms_mvp_tasks_planning.md
cms/services/cms/tests/: README.md  conftest.py  run_tests.py  utils.py
(+54 files in other folders)
